# exchange

./: .gitignore  Cargo.toml  README_deploy_backend.md  TODO.txt  backend_dockerfile  frontend_dockerfile  start_backend.sh
.github/workflows/: backend.yml  build_upload_image.yml  linters.yaml  main.yml
backend/: .env  .gitignore  Cargo.toml  README.md  README.vova.txt  TODO.txt  backend_dockerfile  verify_all.sh
backend/src/: main.rs  models.rs  utils.rs  web.rs  web_service.rs
backend/src/errors/: errors.rs
backend/src/models/: chat_members.rs  chat_message.rs  chats.rs  project.rs  user.rs
backend/src/models/project/: projects.rs
backend/src/user/: users.rs
backend/src/utils/: modify_builder.rs  salted_hashes.rs  tokens.rs
backend/src/web/: authentication.rs  chats.rs  errors.rs  formats.rs  formatts.rs  projects.rs  users.rs
database/: Cargo.toml  README.txt  TODO.txt  docker-compose.yml
database/migrations/: 20230416100301_init.down.sql  20230416100301_init.up.sql  20230814113457_update_chat_messages.down.sql  20230814113457_update_chat_messages.up.sql
database/src/: addresses.rs  chats.rs  companies.rs  lib.rs  projects.rs  users.rs  utils.rs
database/src/utils/: random_samples.rs
database_bin/: .env  Cargo.toml
deployment/: README.md
druid-app/: Cargo.toml
druid-app/src/: main.rs
frontend/: Cargo.toml  TODO.txt
frontend/src/: main.rs  ui_model.rs  widgets.rs
frontend/src/widgets/: chat_group_table.rs  chat_table.rs  selectable_widget.rs  ui_extensions.rs
frontend_lib/: Cargo.toml
frontend_lib/src/: lib.rs
frontend_lib/src/widgets/: chat_group_table.rs  chat_table.rs
gtk-app/: Cargo.toml
gtk-app/src/: main.rs
imgui/: Cargo.toml  build.rs
imgui/src/: main.rs  support.rs
imgui/src/support/: clipboard.rs
qt-app/: Cargo.toml  README.txt
qt-app/src/: main.rs
relm4-app/: Cargo.toml
relm4-app/src/: main.rs
slint/: Cargo.toml  TODO.txt
slint/src/: main.rs
slint_lib/: Cargo.toml  Dockerfile  README.txt  TODO.txt  build.rs  index.html
slint_lib/src/: app.slint  common.slint  lib.rs  message.slint
slint_lib/ui/: app.slint  chat.slint  common.slint  message.slint
ui_2/: Cargo.toml
ui_2_lib/: Cargo.toml
ui_iced/: Cargo.toml  TODO.txt
ui_iced/src/: main.rs
ui_iced_lib/: Cargo.toml
ui_slint/: Cargo.toml  build.rs
ui_slint/src/: main.rs
ui_slint_lib/: Cargo.toml
