[package]
name = "backend"
version = "0.1.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.67"
axum = "0.6.12"
axum-auth = "0.4.0"
axum-macros = "0.3.7"
axum-tracing-opentelemetry = "0.10.0"
base64 = "0.21.0"
database = { path = "../database" }
dotenvy = "0.15.7"
futures = "0.3.27"
futures-retry = "0.6.0"
hyper = { version = "0.14.25", features = ["client"] }
hmac = "0.12.1"
http-body = "0.4.5"
lazy_static = "1.4.0"
opentelemetry = "0.19.0"
opentelemetry-otlp = "0.12.0"
partial_application = "0.2.1"
rand = "0.8.5"
serde = "1.0.158"
serde_json = "1.0.94"
sha2 = "0.10.6"
strum = "0.24.1"
strum_macros = "0.24.3"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
time = { version = "0.3.20", features = ["serde"] }
tokio = { version = "1.26.0", features = ["macros"] }
tower = "0.4.13"
tracing = "0.1.37"
tracing-opentelemetry = "0.19.0"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[profile.dev.package.sqlx-macros]
opt-level = 3
