[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls", "time", "uuid"] }
tokio = { version = "1.26.0", features = ["macros"] }
uuid = { version = "1.3.0", features = ["serde", "v4"] }

[dev-dependencies]
rand = "0.8.1"