[package]
name = "ui_iced"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
iced = { version = "0.9.0", default-features = false, features = ["glow", "default_system_font"] }
iced_native = "0.10.1"
# servo-fontconfig-sys = "5.0.2"
